kubernetes-manifests/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-generator-deployment
  namespace: web-app
spec:
  replicas: 6 # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: qr-generator
  template:
    metadata:
      labels:
        app: qr-generator
    spec:
      containers:
        - name: qr-generator
          image: yash5090/qr-generator:latest # Replace with the actual image tag
          ports:
            - containerPort: 5000 # Replace with the port your Tetris game listens on
            volumeMounts:
          - name: qr-generator-storage
            mountPath: /data  #Mount path inside the container
      volumes:
      - name: qr-generator-storage
        persistentVolumeClaim:
          claimName: qr-generator-pvc  # Reference to the PVC
