kubernetes-manifests/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qr-generator-service
  namespace: web-app
spec:
  selector:
    app: qr-generator
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
