kubernetes-manifests/kubernetes-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qr-generator-network-policy
  namespace: web-app
spec:
  podSelector:
    matchLabels:
      app: qr-generator
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: qr-generator
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: qr-generator
